@@ -1,47 +1,29 @@
 package com.basic;
 
-import lombok.Data;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Test;
 import org.openjdk.jol.info.ClassLayout;
 import org.openjdk.jol.info.GraphLayout;
 
 
-public class ObjectTest {
-
-    @Data
-    static class Object1 {
-        private int age;
-        private String name;
-        private Boolean died;
-    }
-
-    /*
-     * jol 分析对象布局
-     * markword 锁信息 00000101(偏向锁) 可通过 -XX:-UseBiasedLocking 关闭默认开启偏向锁
-     */
-    @Test
-    public void test1() {
-        Object1 o1 = new Object1();
-        System.out.println(ClassLayout.parseInstance(o1).toPrintable());
-    }
+public class StringTest {
 
     /*
      * String 对象布局 及值的内存占用情况
      * .class底层使用unicode编码 英文字符占用1b 汉字占用2b
      */
     @Test
-    public void testStr1() {
+    public void test1() {
         String str1 = "y";
         System.out.println(StringUtils.join("ClassLayout info: ", ClassLayout.parseInstance(str1).toPrintable()));
         System.out.println(StringUtils.join("GraphLayout info: ", GraphLayout.parseInstance(str1).toPrintable()));
     }
 
     /*
-    * String 定义的两种方式
-    */
+     * String 定义的两种方式
+     */
     @Test
-    public void testStr2() {
+    public void test2() {
         String str1 = "ni"; //存入常量池中
         String str2 = new String("ni"); //存入堆中
         System.out.println(str1 == str2);
